--- a/src/components/SideBarFooter.astro
+++ b/src/components/SideBarFooter.astro
@@ -6,7 +6,7 @@
   <div class="flex items-center gap-6 text-gray-400">
     <!-- Discord -->
     <a
-      href="https://discord.gg/u8gqAsC96e"
+      href="https://discord.gg/SyVgVa68S8"
       target="_blank"
       rel="noopener noreferrer"
       aria-label="Discord"
@@ -20,7 +20,7 @@
 
     <!-- Sponsor -->
     <a
-      href="https://github.com/sponsors/tarna"
+      href="https://github.com/sponsors/hannaan123"
       target="_blank"
       rel="noopener noreferrer"
       aria-label="Sponsor"
@@ -34,7 +34,7 @@
 
     <!-- GitHub -->
     <a
-      href="https://github.com/tarna"
+      href="https://github.com/Hannaan123"
       target="_blank"
       rel="noopener noreferrer"
       aria-label="GitHub"
@@ -48,7 +48,7 @@
 
     <!-- Twitter -->
     <a
-      href="https://twitter.com/Tarna_256"
+      href="https://twitter.com"
       target="_blank"
       rel="noopener noreferrer"
       aria-label="Twitter"
