--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@
       </label>
     </div>
     <div class="navbar-center">
-      <a class="btn btn-ghost normal-case text-xl" href="/">Tarna ⚡️</a>
+      <a class="btn btn-ghost normal-case text-xl" href="/">Hannaan ⚡️</a>
     </div>
     <div class="navbar-end"></div>
   </div>
