--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -1,11 +1,12 @@
 ---
 const { sideBarActiveItemID } = Astro.props;
+
 const items = [
   { id: "home", label: "Home", href: "/" },
   { id: "projects", label: "Projects", href: "/projects" },
   { id: "blog", label: "Blog", href: "/blog/" },
   { id: "cv", label: "CV", href: "/cv" },
-  { id: "contact", label: "Contact", href: "mailto:han@soulnetwork.club", external: true },
+  { id: "contact", label: "Contact", href: "/contact" }, 
 ];
 ---
 
