--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const last_projects = projects.slice(0, 3);
     <div class="text-5xl font-bold text-white">I'm Hannaan</div>
     <div class="text-3xl py-3 font-bold text-white">Server Owner and Freelancer</div>
     <div class="py-2 text-lg text-gray-200">
-      Hi, I'm Hannaan — I build Minecraft servers, optimize backend systems, and love hosting servers that run like lightning.
+      Hi, I'm Hannaan — I build Minecraft servers, optimize backend systems, and love hosting servers that run like lightning. I also hate DotTheGuy
     </div>
   </div>
 
